everything but ELK working

--- a/Ansible/ansible.cfg
+++ b/Ansible/ansible.cfg
@@ -25,7 +25,7 @@ python_interpreter=/usr/bin/python3
 
 
 [ssh_connection]
-#ssh_args = -o ControlMaster=auto -o ControlPersist=30m -o ConnectionAttempts=100 -o UserKnownHostsFile=/dev/null
+ssh_args = -o ControlMaster=auto -o ControlPersist=30m -o ConnectionAttempts=100 -o UserKnownHostsFile=/dev/null -F ../terraform/global/VPC/ssh_config
 
 # ssh arguments to use
 # Leaving off ControlPersist will result in poor performance, so use
