--- a/terraform/global/VPC/dev_hosts.cfg
+++ b/terraform/global/VPC/dev_hosts.cfg
@@ -1,18 +1,37 @@
-[servers:vars]
-ansible_ssh_private_key_file=../terraform/global/VPC/VPC-demo-key.pem
-ansible_ssh_extra_args='-o StrictHostKeyChecking=no'
+[jenkins_server:vars]
+ansible_ssh_private_key_file=./VPC-demo-key.pem
+ansible_ssh_extra_args='-F ssh_config'
+ansible_python_interpreter=/usr/bin/python3
 ansible_user=ubuntu
 node_ip=${ubuntu_nodes}
 
 [all_nodes:vars]
-ansible_ssh_private_key_file=../terraform/global/VPC/VPC-demo-key.pem
-ansible_ssh_extra_args='-o StrictHostKeyChecking=no'
+ansible_ssh_private_key_file=./VPC-demo-key.pem
+ansible_ssh_extra_args='-F ssh_config'
 ansible_python_interpreter=/usr/bin/python3
-master_ip=${servers}
+master_ip=${jenkins_server}
 
+[db_servers:vars]
+ansible_ssh_private_key_file=./VPC-demo-key.pem
+ansible_ssh_extra_args='-F ssh_config'
+ansible_python_interpreter=/usr/bin/python3
+ansible_user=ubuntu
 
-[servers]
-${servers}
+[ELK_server:vars]
+ansible_ssh_private_key_file=./VPC-demo-key.pem
+ansible_ssh_extra_args='-F ssh_config'
+ansible_python_interpreter=/usr/bin/python3
+ansible_user=ubuntu
+
+[db_servers]
+${db_servers}
+
+[jenkins_server]
+${jenkins_server}
+
+[ELK_server]
+${ELK_server}
+
 
 [ubuntu_nodes]
 ${ubuntu_nodes} ansible_user=ubuntu
