--- a/terraform/global/VPC/hosts.INI
+++ b/terraform/global/VPC/hosts.INI
@@ -1,22 +1,41 @@
-[servers:vars]
-ansible_ssh_private_key_file=../terraform/global/VPC/VPC-demo-key.pem
-ansible_ssh_extra_args='-o StrictHostKeyChecking=no'
+[jenkins_server:vars]
+ansible_ssh_private_key_file=./VPC-demo-key.pem
+ansible_ssh_extra_args='-F ssh_config'
+ansible_python_interpreter=/usr/bin/python3
 ansible_user=ubuntu
-node_ip=54.236.60.67
+node_ip=10.0.4.156
 
 [all_nodes:vars]
-ansible_ssh_private_key_file=../terraform/global/VPC/VPC-demo-key.pem
-ansible_ssh_extra_args='-o StrictHostKeyChecking=no'
+ansible_ssh_private_key_file=./VPC-demo-key.pem
+ansible_ssh_extra_args='-F ssh_config'
 ansible_python_interpreter=/usr/bin/python3
-master_ip=18.206.249.9
+master_ip=10.0.3.230
 
+[db_servers:vars]
+ansible_ssh_private_key_file=./VPC-demo-key.pem
+ansible_ssh_extra_args='-F ssh_config'
+ansible_python_interpreter=/usr/bin/python3
+ansible_user=ubuntu
 
-[servers]
-18.206.249.9
+[ELK_server:vars]
+ansible_ssh_private_key_file=./VPC-demo-key.pem
+ansible_ssh_extra_args='-F ssh_config'
+ansible_python_interpreter=/usr/bin/python3
+ansible_user=ubuntu
+
+[db_servers]
+10.0.3.87
+
+[jenkins_server]
+10.0.3.230
+
+[ELK_server]
+10.0.4.144
+
 
 [ubuntu_nodes]
-54.236.60.67 ansible_user=ubuntu
+10.0.4.156 ansible_user=ubuntu
 
 [all_nodes]
-54.236.60.67  ansible_user=ubuntu
+10.0.4.156  ansible_user=ubuntu
 
