--- a/Ansible/fix_playbook.yml
+++ b/Ansible/fix_playbook.yml
@@ -4,16 +4,13 @@
   become_method: sudo
   vars: 
     keys_path: ./keys
-  tasks:
-    - include_role:
-        name: mysql
-      when: inventory_hostname in groups['db_servers']   
-      
-    - name: Install Java for Debian on all nodes.
-      apt:
-        name:
-        - openjdk-8-jdk
-        state: present
-        update_cache: yes
-      when: inventory_hostname in groups['all_nodes']
-  
+  tasks:        
+    - name: Copy filebeat.yml to node
+      copy:
+        src: ./filebeat.yml
+        dest: /home/ubuntu
+        mode: 0755
+
+    - name: Run filebeat installation
+      script:
+        cmd: ./filebeat.sh
