--- a/Ansible/filebeat.yml
+++ b/Ansible/filebeat.yml
@@ -1,6 +1,5 @@
 output.elasticsearch:
   hosts: ["elasticsearch.service.consul:9200"]
-  index: "filebeat-%{[agent.version]}-%{+yyyy.MM.dd}"
   indices:
     - index: "critical-%{[beat.version]}-%{+yyyy.MM.dd}"
       when.contains:
@@ -12,9 +11,6 @@ output.elasticsearch:
 filebeat.config.modules:
   enabled: true
   path: ${path.config}/modules.d/*.yml
-
-setup.template.name: "filebeat"
-setup.template.pattern: "filebeat-*"
 
 #============================== Dashboards =====================================
 # These settings control loading the sample dashboards to the Kibana index. Loading
@@ -38,7 +34,7 @@ setup.kibana:
   # Scheme and port can be left out and will be set to the default (http and 5601)
   # In case you specify and additional path, the scheme is required: http://localhost:5601/path
   # IPv6 addresses should always be defined as: https://[2001:db8::1]:5601
-  host: "kibana.service.consul:5601"
+  host: "kibana.service.consul"
 
   # Kibana Space ID
   # ID of the Kibana Space into which the dashboards should be loaded. By default,
