--- a/Ansible/grafana-values.yml
+++ b/Ansible/grafana-values.yml
@@ -21,33 +21,25 @@ dashboardProviders:
        path: /var/lib/grafana/dashboards
 dashboardsConfigMaps:
   default: grafana-import-dashboards
-
-notifiers:
-  - name: notification-channel-1
-    type: slack
-    uid: notifier1
-    # either
-    org_id: 2
-    # or
-    org_name: Main Org.
-    is_default: true
-    send_reminder: true
-    frequency: 1h
-    disable_resolve_message: false
-    # See `Supported Settings` section for settings supporter for each
-    # alert notification type.
-    settings:
-      recipient: "XXX"
-      token: "xoxb"
-      uploadImage: true
-      url: https://slack.com
-
-delete_notifiers:
-  - name: notification-channel-1
-    uid: notifier1
-    # either
-    org_id: 2
-    # or
-    org_name: Main Org.
-  - name: notification-channel-2
-    # default org_id: 1
+notifiers: 
+ notifiers.yaml:
+   notifiers:
+   - name: slack-channel
+     type: slack
+     uid: grafana
+     org_id: 1
+     is_default: true
+     send_reminder: true
+     frequency: 1h
+     disable_resolve_message: false
+     # See `Supported Settings` section for settings supporter for each
+     # alert notification type.
+     settings:
+       recipient: nofars
+       # token: "xoxb"
+       uploadImage: false
+       url: https://hooks.slack.com/services/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
+ delete_notifiers:
+   - name: slack-channel
+     uid: grafana
+     org_id: 1
