--- a/terraform/global/VPC/hosts.INI
+++ b/terraform/global/VPC/hosts.INI
@@ -1,41 +1,33 @@
-[jenkins_server:vars]
+[all:vars]
 ansible_ssh_private_key_file=./VPC-demo-key.pem
 ansible_ssh_extra_args='-F ssh_config'
 ansible_python_interpreter=/usr/bin/python3
 ansible_user=ubuntu
-node_ip=10.0.4.14
+
+[jenkins_server:vars]
+node_ip=10.0.4.6
 
 [all_nodes:vars]
-ansible_ssh_private_key_file=./VPC-demo-key.pem
-ansible_ssh_extra_args='-F ssh_config'
-ansible_python_interpreter=/usr/bin/python3
-master_ip=10.0.3.201
-
-[db_servers:vars]
-ansible_ssh_private_key_file=./VPC-demo-key.pem
-ansible_ssh_extra_args='-F ssh_config'
-ansible_python_interpreter=/usr/bin/python3
-ansible_user=ubuntu
-
-[ELK_server:vars]
-ansible_ssh_private_key_file=./VPC-demo-key.pem
-ansible_ssh_extra_args='-F ssh_config'
-ansible_python_interpreter=/usr/bin/python3
-ansible_user=ubuntu
+master_ip=10.0.3.87
 
 [db_servers]
-10.0.3.18
+10.0.3.232
 
 [jenkins_server]
-10.0.3.201
+10.0.3.87
 
 [ELK_server]
-10.0.4.197
+10.0.4.26
 
 
 [ubuntu_nodes]
-10.0.4.14 ansible_user=ubuntu
+10.0.4.6 ansible_user=ubuntu
 
 [all_nodes]
-10.0.4.14  ansible_user=ubuntu
+10.0.4.6  ansible_user=ubuntu
+
+[consul_servers]
+10.0.3.91
+10.0.4.12
+10.0.3.169
 
