--- a/terraform/global/VPC/ansible.cfg
+++ b/terraform/global/VPC/ansible.cfg
@@ -17,6 +17,7 @@ stdout_callback = yaml
 bin_ansible_callbacks = True
 host_key_checking=False
 python_interpreter=/usr/bin/python3
+ask_vault_pass=True
 
 [privilege_escalation]
 #become = False
