--- a/terraform/global/VPC/dev_hosts.cfg
+++ b/terraform/global/VPC/dev_hosts.cfg
@@ -1,27 +1,14 @@
-[jenkins_server:vars]
+[all:vars]
 ansible_ssh_private_key_file=./VPC-demo-key.pem
 ansible_ssh_extra_args='-F ssh_config'
 ansible_python_interpreter=/usr/bin/python3
 ansible_user=ubuntu
+
+[jenkins_server:vars]
 node_ip=${ubuntu_nodes}
 
 [all_nodes:vars]
-ansible_ssh_private_key_file=./VPC-demo-key.pem
-ansible_ssh_extra_args='-F ssh_config'
-ansible_python_interpreter=/usr/bin/python3
 master_ip=${jenkins_server}
-
-[db_servers:vars]
-ansible_ssh_private_key_file=./VPC-demo-key.pem
-ansible_ssh_extra_args='-F ssh_config'
-ansible_python_interpreter=/usr/bin/python3
-ansible_user=ubuntu
-
-[ELK_server:vars]
-ansible_ssh_private_key_file=./VPC-demo-key.pem
-ansible_ssh_extra_args='-F ssh_config'
-ansible_python_interpreter=/usr/bin/python3
-ansible_user=ubuntu
 
 [db_servers]
 ${db_servers}
@@ -38,3 +25,6 @@ ${ubuntu_nodes} ansible_user=ubuntu
 
 [all_nodes]
 ${ubuntu_nodes}  ansible_user=ubuntu
+
+[consul_servers]
+${consul_servers}
